--- a/css/custom_placeOrder.css
+++ b/css/custom_placeOrder.css
@@ -17,17 +17,35 @@ body {
     margin-right: auto;
 }
 
-#shippingInfo {
-    display: none;
+h1 {
+    text-align: center;
 }
 
 #shippingInfo input {
-    height: 28px;
-    width: 40%;
+    display: block;
+    min-width: 180px;
+    width: 50%;
+    margin-bottom: 0.4em;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+#shippingInfo {
+    display: none;
+    margin: 0 auto;
+    max-width: 50%;
+    text-align: center;
+}
+
+#address_state_chosen {
+    margin: 0 auto;
+    min-width: 180px;
+    text-align: left;
     margin-bottom: 0.4em;
 }
 
-#address_state {
-    height: 28px;
-    width: 10%;
+#address_zip {
+    display: inline-block !important;
+    width: 30% !important;
 }
