--- a/css/custom_placeOrder.css
+++ b/css/custom_placeOrder.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 #propertyTypeSelect {
@@ -19,6 +20,11 @@ body {
 
 h1 {
     text-align: center;
+}
+
+#specialInstructions {
+    width: 365px;
+    height: 200px;
 }
 
 #shippingInfo [type=text]{
@@ -42,10 +48,25 @@ h1 {
 }
 
 #shippingInfo {
-    display: none;
     margin: 0 auto;
     max-width: 800px;
     text-align: center;
+}
+
+#shippingInfo2 {
+    margin: 100px auto 100px auto;
+    max-width: 800px;
+    text-align: center;
+}
+
+#shippingInfo3 {
+    margin: 300px auto 500px auto;
+    max-width: 800px;
+    text-align: center;
+}
+
+#shippingInfo3 [type=button] {
+    height: 100px;
 }
 
 #address_state_chosen {
