Added Styling to Manager Section of Order Form
This will serve as the baseline for the remainder of the order forms.

--- a/css/custom_placeOrder.css
+++ b/css/custom_placeOrder.css
@@ -70,12 +70,9 @@ h1 {
 }
 
 #productSelect_manager {
-    margin: 300px -530px 500px;
+    margin: 0 auto 500px auto;
+    text-align: center;
     max-width: 800px;
-}
-
-#productSelect_manager [type=button]{
-    margin-right: 100px;
 }
 
 #address_state_chosen {
