--- a/css/custom_landing.css
+++ b/css/custom_landing.css
@@ -1,5 +1,5 @@
 html {
-	background-color: #C8C8C8;
+	background-image: url("../img/green_cup.png");
 	font-family: 'Open Sans', sans-serif;
 	min-height: 100%;
 	position: relative;
@@ -10,6 +10,7 @@ body {
 	margin: 0;
 	width: 100%;
 	height: 100%;
+        min-width: 768px;
 }
 
 #wrapper {
@@ -17,13 +18,6 @@ body {
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: #BCBCBC;
-	position:absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    overflow:hidden;
 }
 
 #logo {
@@ -39,9 +33,8 @@ body {
 }
 
 #orderOptions {
-	min-width: 400px;
-    width: 30%;
-    margin-left: 0.7em;
+    min-width: 300px;
+    width: 26%;
 }
 
 #orderOptions > input[type="button"] {
@@ -71,14 +64,14 @@ body {
 }
 
 #orderPanel {
-	border: 3px dotted #FFFFFF;
+    border: 3px dotted #FFFFFF;
     float: right;
     margin-right: 0.7em;
     min-width: 700px;
     height:700px;
     width: 70%;
     overflow: hidden;
-    position: absolute;
+    
     bottom: 0;
     right: 0;
     top: 0;
