--- a/css/custom_landing.css
+++ b/css/custom_landing.css
@@ -1,78 +1,74 @@
 html {
-	background-image: url("../img/green_cup.png");
-	font-family: 'Open Sans', sans-serif;
-	min-height: 100%;
-	position: relative;
+    background-image: url("../img/green_cup.png");
+    font-family: 'Open Sans', sans-serif;
+    min-height: 100%;
+    position: relative;
 }
 
 body {
-	padding: 0;
-	margin: 0;
-	width: 100%;
-	height: 100%;
-        min-width: 768px;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    min-width: 768px;
 }
 
 #wrapper {
-	max-width: 1366px;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
+    max-width: 1366px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #logo {
-	min-width: 325px;
-    width: 20%;
+    min-width: 325px;
+    width: 100%;
 }
 
 #logo img {
-	width: 25%;
-	margin-top: 0.7em;
-	margin-bottom: 0.7em;
-	margin-left: 0.7em;
+    width: 7%;
+    margin-top: 0.7em;
+    margin-bottom: 0.7em;
+    margin-left: 0.7em;
 }
 
 #orderOptions {
-    min-width: 300px;
-    width: 26%;
+    display: inline-block;
+    width: 75%;
+    text-align: center;
+    margin-left: 50px;
 }
 
 #orderOptions > input[type="button"] {
-	height: 100px;
+    height: 50px;
     margin-bottom: 0.7em;
-    width: 75%;
-    display: block;
+    width: 15%;
+    display: inline-block;
 }
 
 #orderNumber_status, #orderNumber_revise, #orderNumber_cancel {
-	display: none;
-	margin-bottom: 0.7em;
-	width: 75.5%;
+    display: none;
+    margin-bottom: 0.7em;
+    width: 75.5%;
 }
 
 #orderNumber_status > input[type="number"], 
 #orderNumber_revise > input[type="number"], 
 #orderNumber_cancel > input[type="number"] {
-	width: 60%;
+    width: 60%;
 }
 
 #orderNumber_status > input[type="button"], 
 #orderNumber_revise > input[type="button"], 
 #orderNumber_cancel > input[type="button"] {
-	width: 36%;
-	text-align: center;
+    width: 36%;
+    text-align: center;
 }
 
 #orderPanel {
     border: 3px dotted #FFFFFF;
-    float: right;
-    margin-right: 0.7em;
     min-width: 700px;
     height:700px;
-    width: 70%;
+    width: 100%;
     overflow: hidden;
-    
-    bottom: 0;
-    right: 0;
-    top: 0;
 }
